# MXEN3005

./: README.md
milestone5_ws/src/robots_viz/: package.xml  setup.cfg  setup.py
milestone5_ws/src/robots_viz/launch/: robots_viz_launch.xml
milestone5_ws/src/robots_viz/urdf/: example2robot.urdf.xacro  robot1.urdf.xacro  robot2.urdf.xacro  robot3.urdf.xacro
milestone5_ws/src/wx250s_viz/: package.xml  setup.cfg  setup.py
milestone5_ws/src/wx250s_viz/config/: wx250s.rviz
milestone5_ws/src/wx250s_viz/launch/: wx250s_twin_viz_launch.xml  wx250s_viz_launch.xml
milestone5_ws/src/wx250s_viz/urdf/: wx250s.urdf.xacro
mxen_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
mxen_ws/log/: latest_build
mxen_ws/src/wx250s/: package.xml  setup.cfg  setup.py
mxen_ws/src/wx250s/launch/: wx250s_launch.xml  wx250s_sim_launch.xml
mxen_ws/src/wx250s/wx250s/: cartesian_ptp_node.py  git_testing.py  gripper_node.py  homing_node.py  joint_ptp_node.py  joint_state_node.py  pick_and_place_node.py  pose_node.py  wx250s_kinematics.py
mxen_ws/src/wx250s_interface/: CMakeLists.txt
mxen_ws/src/wx250s_interface/action/: CartesianPTP.action  JointPTP.action  ShrineBuild.action
mxen_ws/src/wx250s_interface/service/: PickPlace.srv
mxen_ws/src/wx250s_interface/srv/: PickPlace.srv
mxen_ws/src/wx250s_teleop/: package.xml  setup.cfg  setup.py
mxen_ws/src/wx250s_teleop/launch/: wx250s_remote_launch.xml  wx250s_robot_launch.xml  wx250s_sim_robot_launch.xml
mxen_ws/src/wx250s_teleop/urdf/: wx250s.urdf.xacro
(+43 files in other folders)
